# Lua-RTOS-ESP32

./: .board  .cproject  .gitignore  .gitmodules  .project  .travis.yml  :wq  ESP32-CORE-BOARD  ESP32-CORE-BOARD-OTA  ESP32-THING  ESP32-THING-OTA  GENERIC  GENERIC-OTA  LICENSE  Makefile  README.md  WHITECAT-ESP32-G1  WHITECAT-ESP32-N1  WHITECAT-ESP32-N1-DEVKIT  WHITECAT-ESP32-N1-DEVKIT-OTA  WHITECAT-ESP32-N1-OTA  a  bld.sh  build  common.mk  dis  env  err  flash.conf  parameters.mk  partitions-ota-smart.csv  partitions-ota.csv  partitions.csv  prepare  sdkconfig  sdkconfig.old
FreeRTOS/: component.mk
FreeRTOS/Source/: heap_adds.inc  tasks.c  tasks_adds.inc
Lua/: component.mk
Lua/adds/: lrotable.h  luaconf.h  modules.h
Lua/common/: lex.yy.c  linenoise.c  linenoise.h  lrotable.c  y.tab.c
Lua/modules/: adc.c  adc.h  auxmods.h  can.c  error.h  gps.c  http.c  i2c.c  i2c.h  linit.c  liolib_adds.inc  lora.c  loslib_adds.inc  lpack.c  lua_adds.inc  mqtt.c  net.c  nvs.c  pio.c  pio.h  pwm.c  spi.c  stepper.c  thread.c  thread.h  tmr.c  uart.c
Lua/platform/: adc.c  can.c  gps.c  i2c.c  net.c  pio.c  pwm.c  spi.c  uart.c
Lua/src/: lapi.c  lauxlib.c  lbaselib.c  lcorolib.c  ldblib.c  lgc.c  lmathlib.c  lobject.h  loslib.c  lstrlib.c  ltable.c  lua.c  lua.h  lualib.h  lvm.h
boards/: ADAFRUIT-HUZZAH32  ADAFRUIT-HUZZAH32-OTA  CITILAB-ED1  DOIT-ESP32-DEVKIT-V1  DOIT-ESP32-DEVKIT-V1-OTA  ESP-WROVER-KIT  ESP-WROVER-KIT-OTA  ESP32-CORE-BOARD  ESP32-CORE-BOARD-OTA  ESP32-EVB  ESP32-EVB-OTA  ESP32-GATEWAY  ESP32-GATEWAY-OTA  ESP32-PICO-KIT  ESP32-PICO-KIT-OTA  ESP32-POE  ESP32-POE-OTA  ESP32-THING  ESP32-THING-OTA  EVK-NINA-W  GENERIC  GENERIC-OTA  HELTEC-WIFI32-KIT-OLED  M5STACK  M5STACK-OTA  NEW-BOARD  PYCOM-FIPY  PYCOM-FIPY-OTA  TRAVIS-ESP32-EVB-OTA  TTGO-LORA32  TTGO-LORA32-OTA  TTGO-T4  WEMOS-ESP32-LOLIN  WEMOS-ESP32-OLED  WEMOS-ESP32-OLED-OTA  WESP32  WESP32-OTA  WHITECAT-ESP32-G1  WHITECAT-ESP32-LORA-GW  WHITECAT-ESP32-LORA-GW-OTA  (+15 more)
cloud/: app.js  mqtt.js  pack.js  settings.js  ttn.js  whitecat.js
components/accel/: accel.c  accel.h  gesture_display.c  gesture_display.h
components/adxl345/: adxl345.c
components/ble/: component.mk  test.c
components/can/: CAN.c  component.mk
components/captivedns/: captivedns.c  component.mk
components/compat/: component.mk  gai_strerror.c  gethostbyaddr.c  getnameinfo.c  getservbyname.c  hostname.c  hstrerror.c  if_nametoindex.c  res_init.c
components/curl/: ca-certificates.crt  component.mk
components/dropbear/: Makefile  Makefile.projbuild  auth.h  cli-kex.c  common-channel.c  common-session.c  compat.c  component.mk  config.h  config.status  dbutil.c  dbutil.h  gensignkey.c  includes.h  list.c  list.h  loginrec.c  netio.c  options.h  packet.c  packet.h  runopts.h  scp.c  session.h  signkey.c  sshpty.c  svr-auth.c  svr-authpubkey.c  svr-chansession.c  svr-kex.c  svr-main.c  svr-session.c  svr-tcpfwd.c  sysoptions.h  untitled.txt
components/fat/: component.mk  diskio.c  ff.c  ff.h  ffconf.h
components/flashfs_image/: Makefile.projbuild
components/gdisplay/: component.mk  gdisplay.c  gdisplay.h
components/http/: component.mk  httpsrv.c  preprocessor.c  preprocessor.h
components/lfs/: Makefile.projbuild  component.mk  lfs.c  lfs.h
components/libcrypt/: crypt-md5.c  crypt.c  crypt.h  misc.c
components/libssh2/: component.mk
components/libutil/: component.mk  openpty.c  pty.h  ttyname.c
components/linux/: component.mk
components/lora/: Makefile.projbuild  component.mk
components/lua/: Makefile.projbuild  component.mk
components/lua_rtos/: Kconfig  Makefile.projbuild  component.mk  component.mk.orig  luartos.h  luartos_custom.h  main.c
docker/: .bashrc  Dockerfile  README.md  build.sh
doku/: ssd1306-oled.md
include/: preprocessor.h  pthread.h
ld/: lua-rtos.ld
main/: build.h  component.mk  lua_rtos_main.c  main.c  sys_init.c  whitecat.h
main/platform/esp8266/newlib/newlib/libc/machine/: Makefile  Makefile.am  config.status
main/platform/esp8266/newlib/newlib/libc/machine/sparc/: setjmp.S
main/platform/esp8266/newlib/newlib/libc/machine/xtensa/: Makefile  aclocal.m4  config.status  setjmp.S  strcpy.S  strncpy.S  xtensa-asm.h  xtensa.tex
main/platform/esp8266/newlib/newlib/libm/: Makefile  Makefile.am  config.status  libm.texinfo
main/platform/esp8266/newlib/newlib/libm/common/: Makefile
main/platform/esp8266/newlib/newlib/libm/complex/: Makefile
main/platform/esp8266/newlib/newlib/libm/machine/: Makefile  config.status  configure
main/platform/esp8266/newlib/newlib/libm/machine/xtensa/: Makefile  Makefile.am  Makefile.in  config.status  configure.in  feclearexcept.c  fegetround.c
main/platform/esp8266/newlib/newlib/libm/math/: Makefile  e_fmod.c  ef_fmod.c  ef_remainder.c  ef_sqrt.c  w_fmod.c  wf_remainder.c
main/platform/esp8266/newlib/newlib/libm/mathfp/: Makefile
make/: fs.mk  part.mk
mkspiffs/: Makefile  main.cpp  mkspiffs
platform/esp8266/newlib/newlib/libc/machine/xtensa/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.in  memcpy.S  memset.S  strcmp.S  strlen.S
platform/esp8266/newlib/newlib/libc/sys/xtensa/: Makefile  Makefile.am  Makefile.in  clibrary_init.c  config.status  configure  configure.in  creat.c  crt0.c  lock.c
platform/pic32mz/newlib/newlib/libc/stdio/: Makefile  Makefile.am  Makefile.in  asnprintf.c  dprintf.c  fflush.c  fgets.c  findfp.c  fpurge.c  fputwc.c  fputws.c  fread.c  freopen.c  ftell.c  fwide.c  fwprintf.c  getc.c  gets.c  refill.c  snprintf.c  sscanf.c  stdio.tex  swprintf.c  swscanf.c  ungetwc.c  vasiprintf.c  vfwprintf.c  vfwscanf.c  viprintf.c  viscanf.c  vsiprintf.c  vsprintf.c  vsscanf.c  vswprintf.c  vswscanf.c  vwscanf.c  wbuf.c  wprintf.c  wscanf.c
pthread/: attr.c  cleanup.c  component.mk  cond.c  create.c  join.c  key.c  mutex.c  once.c  pthread.c  self.c
spiffs_image/: system.lua
sys/: cdefs.h  component.mk  debug.c  debug.h  delay.h  dirent.h  edit.c  file.h  filedesc.h  mount.h  mutex.h  panic.c  panic.h  queue.h  status.c  status.h  syslog.h  ucred.h  uio.h
sys/fat/: ff.c  (+4 more)
test/: pthread-cond.c
(+2351 files in other folders)
