dnl WARNING! The version of autoconf we use at Tensilica as of Tue 06 Sep 2011
dnl is buggy with respect to Cygwin line endings. When this file is processed
dnl with autoconf to produce a configure script, please ensure that the
dnl following line appears with two backslashes, like so:
dnl 
dnl ac_cs_awk_cr='\\r'
dnl 
dnl A manual change may be necessary to produce this.
dnl
dnl This is the newlib/libc/machine/arm configure.in file.
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([newlib],[NEWLIB_VERSION])
AC_CONFIG_SRCDIR([Makefile.am])

dnl Can't be done in NEWLIB_CONFIGURE because that confuses automake. 
AC_CONFIG_AUX_DIR(../../../..)

NEWLIB_CONFIGURE(../../..)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
